RESOLVED FIXED60266
Web Inspector: inspector/console/console-shadow-dom-access.html crashes on mac debug
https://bugs.webkit.org/show_bug.cgi?id=60266
Summary Web Inspector: inspector/console/console-shadow-dom-access.html crashes on ma...
Andrey Kosyakov
Reported 2011-05-05 07:06:11 PDT
Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x00000000bbadbeef Crashed Thread: 0 Thread 0 Crashed: 0 com.apple.WebCore 0x033979a9 kitClass(WebCore::Node*) + 915 1 com.apple.WebCore 0x033c61f1 kit(WebCore::Node*) + 137 2 com.apple.WebKit 0x00ee4113 WebInspectorClient::highlight(WebCore::Node*) + 41 (WebInspectorClient.mm:102) 3 com.apple.WebCore 0x03690b1f WebCore::InspectorDOMAgent::highlight(WTF::String*, WebCore::Node*, WTF::String const&) + 173 4 com.apple.WebCore 0x03690c4e WebCore::InspectorDOMAgent::highlightNode(WTF::String*, int, WTF::String*) + 140 5 com.apple.WebCore 0x03663133 WebCore::InspectorBackendDispatcher::DOM_highlightNode(long, WebCore::InspectorObject*) + 515 6 com.apple.WebCore 0x03655516 WebCore::InspectorBackendDispatcher::dispatch(WTF::String const&) + 16932
Attachments
patch (1.08 KB, patch)
2011-05-06 01:28 PDT, Andrey Kosyakov
sam: review+
Jessie Berlin
Comment 1 2011-05-05 08:47:12 PDT
*** Bug 60270 has been marked as a duplicate of this bug. ***
Jessie Berlin
Comment 2 2011-05-05 08:48:18 PDT
Andrey Kosyakov
Comment 3 2011-05-06 01:28:39 PDT
Andrey Kosyakov
Comment 4 2011-05-10 06:24:27 PDT
Manually cimmitted r86147: http://trac.webkit.org/changeset/86147 (also removed test suppression as part of this change)
WebKit Review Bot
Comment 5 2011-05-10 08:09:07 PDT
http://trac.webkit.org/changeset/86147 might have broken SnowLeopard Intel Release (WebKit2 Tests) The following tests are not passing: fast/frames/flattening/frameset-flattening-subframesets.html
Note You need to log in before you can comment on or make changes to this bug.