2011-05-10  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Sam Weinig.

        Web Inspector: inspector/console/console-shadow-dom-access.html crashes on mac debug
        https://bugs.webkit.org/show_bug.cgi?id=60266

        * bindings/objc/DOM.mm:
        (kitClass): return DOMNode class for shadow root node

2011-05-10  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Sam Weinig.

        Web Inspector: inspector/console/console-shadow-dom-access.html crashes on mac debug
        https://bugs.webkit.org/show_bug.cgi?id=60266

        * platform/mac/Skipped: removed suppression of console-shadow-dom-access.html


Canonical link: https://commits.webkit.org/75811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86147 268f45cc-cd09-0410-ab3c-d52691b4dbfc